tests/NormalTests/paczka1/small_fuzzy/96156198.err
Error in line 3: aW3 S955 37,7
Error in line 5: NXwukcJG S631 91,4
Error in line 2: Lzq A804 50,8
Error in line 4: aW3 A804 58,9
Error in line 7: NXwukcJG S197 4,9
Error in line 8: Lzq S955 56,2
